<package>
  <name>arm_navigation_msgs</name>
  <version>1.3.0</version>
  <description>arm_navigation_msgs</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/arm_navigation_msgs</url>

  <author>Gil Jones</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

  <export>
  </export>
</package>
