<package>
  <name>openrave</name>
  <version>0.0.2</version>
  <description>In order to use, please add the following line in your bashrc:</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>Lesser GPL and Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://openrave.org</url>

  <author>Rosen Diankov (rosen.diankov@gmail.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>collada_robots</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>git</build_depend>
  <!-- <build_depend>qt4-dev-tools</build_depend> -->
  <build_depend>zlib</build_depend>
  <build_depend>ipython</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-h5py</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>python-sympy</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <!-- <build_depend>opende</build_depend> -->
  <build_depend>libogg</build_depend>
  <!-- <build_depend>libopenscenegraph</build_depend> -->
  <build_depend>pcre</build_depend>
  <build_depend>pcre-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libqt4</build_depend>
  <build_depend>libsoqt4-dev</build_depend>
  <build_depend>libx264-dev</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>collada_robots</run_depend>
  <run_depend>collada-dom</run_depend>
  <!-- <run_depend>qt4-dev-tools</run_depend> -->
  <run_depend>zlib</run_depend>
  <run_depend>ipython</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-h5py</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-sympy</run_depend>
  <run_depend>assimp-dev</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <!-- <run_depend>opende</run_depend> -->
  <run_depend>libogg</run_depend>
  <!-- <run_depend>libopenscenegraph</run_depend> -->
  <run_depend>pcre</run_depend>
  <run_depend>pcre-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>libsoqt4-dev</run_depend>
  <run_depend>libx264-dev</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib `${prefix}/bin/openrave0.9-config --libs` `${prefix}/bin/openrave0.9-config --libs-core`" cflags="`${prefix}/bin/openrave0.9-config --cflags`"/>
    <python path="${prefix}/src"/>
  </export>

</package>
