<package>
  <name>openrave_calibration</name>
  <version>0.0.1</version>
  <description>Package uses openrave planning and the robot_calibration stacks to calibrate a robot's sensors. The calibration only depends on the openrave/collada descriptions, therefore it is meant to be a relatively simple way of calibrating new robots with one-click.</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankov</maintainer>

  <license>Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://openrave.programmingvision.com/index.php/ROS:openrave_calibration</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rosen.diankov@gmail.com">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>roslaunch</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <run_depend>roslaunch</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>openrave</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>resource_retriever</test_depend> -->
  <!-- <test_depend>posedetection_msgs</test_depend> -->
  <!-- <test_depend>roslaunch</test_depend> -->

</package>
