<package>
  <name>openrave_database</name>
  <version>0.0.1</version>
  <description>Uses ROS to parallelize the database generation processes inside OpenRAVE.</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankov</maintainer>

  <license>Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://openrave.org</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rosen.diankov@gmail.com">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>openrave</build_depend>
  <build_depend>parallel_util</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>openrave</run_depend>
  <run_depend>parallel_util</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>openrave</test_depend> -->
  <!-- <test_depend>parallel_util</test_depend> -->

</package>
