<package>
  <name>openrave_msgs</name>
  <version>0.0.1</version>
  <description>Contains ROS messages and services that are commonly used in the openrave_planning stack.</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankove</maintainer>

  <license>Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://www.ros.org/wiki/openrave_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rosen.diankov@gmail.com">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->

</package>
