<package>
  <name>openrave_robot_control</name>
  <version>0.0.1</version>
  <description>Contains messages, services, and OpenRAVE clients to interface to robot hardware.

    - librobot_control - openrave plugin for ros client to talk to robot services
    - openravecontroller.h - base class for robot server using services
    - tfsender - given joint positions of the robot, sends the correct tf frames

    For more information on how to use this inside the openrave framework, see:
    http://openrave.programmingvision.com/wiki/index.php/ROS:ControllingRobots</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankov</maintainer>

  <license>Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://www.ros.org/wiki/openrave_robot_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rosen.diankov@gmail.com">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp_sessions</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>openrave_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp_sessions</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>openrave_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp_sessions</test_depend> -->
  <!-- <test_depend>openrave</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>openrave_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/srv/cpp -I${prefix}/msg/cpp -I${prefix}/include"/>
    <openrave pluginpath="${prefix}/lib"/>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>
