<package>
  <name>openrave_robot_filter</name>
  <version>0.0.1</version>
  <description>Utilities for filtering the robot out of sensor data</description>
  <maintainer email="rdiankov@cs.cmu.edu">Rosen Diankov</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/robot_self_filter</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rdiankov@cs.cmu.edu">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>bullet</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>bullet</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>tf2</test_depend> -->
  <!-- <test_depend>filters</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>resource_retriever</test_depend> -->
  <!-- <test_depend>openrave</test_depend> -->
  <!-- <test_depend>bullet</test_depend> -->

<export>
    <openrave pluginpath="${prefix}/lib"/>
</export>

</package>
